# toolforge-ssv

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  HF-README.md  Integration_env.md  README.md  REWARD_ANALYSIS.md  Workdone.md  __init__.py  _test_restructured.py  client.py  evaluation.md  graders.py  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  test_output.txt
.agents/workflows/: instructions.md
server/: __init__.py  app.py  graders.py  gradio_ui.py  rubrics.py  toolforge_env_environment.py
server/evaluation/: __init__.py  pipeline.py  plan_evaluator.py  tool_slot_mappings.py
server/inputs/: base.py
server/tools/: base.py
server/ui/: __init__.py  byoa_tab.py  demo_tab.py  env_client.py  hvl_tab.py  local_agent_server.py  shared.py
server/utils/: macro_utils.py  state_utils.py  tool_utils.py
ssv/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
ssv/server/: Dockerfile  __init__.py  app.py  ssv_environment.py
test/: test_demo_sync.py
toolforge_env/: README.md  __init__.py  client.py  diagnose_llm.py  generate_tasks.py  graders.py  gradio_app.py  inference.py  models.py  openenv.yaml  pyproject.toml  submission.md  test_environment.py  test_environment1.py  test_loop.py  test_macro_penalty.py  test_reward.py  test_tools_delivery.py  validate_tasks.py  validation_output.txt
toolforge_env/server/: __init__.py  app.py  evaluation_pipeline.py  graders.py  llm_eval_prompts.py  plan_evaluator.py  slots.py  tasks.py  test_evaluation_pipeline.py  (+5 more)
ui/: demo_tab.py  env_client.py  hvl_tab.py  shared.py
(+38 files in other folders)
